# zephyr-dom0-xt

./: CMakeLists.txt  Kconfig  README.rst  prj.conf  st  west.yml
boards/: rpi_5.conf  rpi_5.overlay  xenvm-qemu.overlay
prebuilt/: helloworld_xen-arm64  unikernel.dtb  zephyr_blinky.dtb
pytest/: test_shell.py
src/: cmd_gcov.c  dom0.c  dom0.h  domain_bins.S  domd_bin.S  domd_cfg.c  domu_cfg.c  storage.c  vchan_cmds.c
src/dom_cfg/: rpi_5.c  rpi_5_domd.c
